--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Links</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Graffiti Background Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>͓̽A͓͓̽̽P͓̽ ͓̽E͓͓̽̽n͓͓̽̽t͓͓̽̽e͓͓̽̽r͓͓̽̽p͓͓̽̽r͓͓̽̽i͓͓̽̽z͓͓̽̽e͓͓̽̽s͓̠̽</h1>
-            <p>Connect with me on social media</p>
+            <h1>https://www.imghippo.com/i/jtq1611YoA.png</h1>
+            <p>Welcome to my website with a fiery graffiti background.</p>
         </header>
-        <main>
-            <ul class="social-links">
-                <li><a href="https://www.instagram.com/krazyap419?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a></li>
-                                <li><a href="https://youtube.com/@krazyapenterprizes?feature=shared"_blank">YouTube</a></li>
-                <li><a href="https://open.spotify.com/artist/6mRqFoQJu85zuCNUYcYgsp?si=NHS62Kc4RO2tj1Lu-Wa32g"_blank">Spotify</a></li>
-            </ul>
-        </main>
-    </div>
-</body>
-</html>
+
+        <ul class="social-links">
+            <li><a href="https://www.instagram.com" aria-label="Instagram">Instagram</a></li>
+            <li><a href="https://www.twitter.com"
