--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <main>
             <ul class="social-links">
                 <li><a href="https://www.instagram.com/krazyap419?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a></li>
-                                <li><a href="https://youtube.com/@krazyapenterprizes?feature=shared"_blank">YouTube</a></li>
-                <li><a href="https://open.spotify.com/artist/6mRqFoQJu85zuCNUYcYgsp?si=NHS62Kc4RO2tj1Lu-Wa32g"_blank">Spotify</a></li>
+                <li><a href="https://youtube.com/@krazyapenterprizes?feature=shared" target="_blank">YouTube</a></li>
+                <li><a href="https://open.spotify.com/artist/6mRqFoQJu85zuCNUYcYgsp?si=NHS62Kc4RO2tj1Lu-Wa32g" target="_blank">Spotify</a></li>
+                <li><a href="https://soundcloud.com/your-soundcloud-link" target="_blank">SoundCloud</a></li>
             </ul>
         </main>
     </div>
